; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarUI8FromR4.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarUI8FromR4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FLOAT = common dso_local global i32 0, align 4
@VarUI8FromR4 = common dso_local global i32 0, align 4
@EXPECT_OVERFLOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarUI8FromR4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarUI8FromR4() #0 {
  %1 = load i32, i32* @FLOAT, align 4
  %2 = call i32 @CONVVARS(i32 %1)
  %3 = load i32, i32* @VarUI8FromR4, align 4
  %4 = call i32 @CONVERT(i32 %3, float -1.000000e+00)
  %5 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %6 = load i32, i32* @VarUI8FromR4, align 4
  %7 = call i32 @CONVERT(i32 %6, float 0.000000e+00)
  %8 = call i32 @EXPECTI8(i32 0)
  %9 = load i32, i32* @VarUI8FromR4, align 4
  %10 = call i32 @CONVERT(i32 %9, float 1.000000e+00)
  %11 = call i32 @EXPECTI8(i32 1)
  %12 = load i32, i32* @VarUI8FromR4, align 4
  %13 = call i32 @CONVERT(i32 %12, float 2.550000e+02)
  %14 = call i32 @EXPECTI8(i32 255)
  %15 = load i32, i32* @VarUI8FromR4, align 4
  %16 = call i32 @CONVERT(i32 %15, float -1.500000e+00)
  %17 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %18 = load i32, i32* @VarUI8FromR4, align 4
  %19 = call i32 @CONVERT(i32 %18, float 0xBFE3333340000000)
  %20 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %21 = load i32, i32* @VarUI8FromR4, align 4
  %22 = call i32 @CONVERT(i32 %21, float -5.000000e-01)
  %23 = call i32 @EXPECTI8(i32 0)
  %24 = load i32, i32* @VarUI8FromR4, align 4
  %25 = call i32 @CONVERT(i32 %24, float 0xBFD99999A0000000)
  %26 = call i32 @EXPECTI8(i32 0)
  %27 = load i32, i32* @VarUI8FromR4, align 4
  %28 = call i32 @CONVERT(i32 %27, float 0x3FD99999A0000000)
  %29 = call i32 @EXPECTI8(i32 0)
  %30 = load i32, i32* @VarUI8FromR4, align 4
  %31 = call i32 @CONVERT(i32 %30, float 5.000000e-01)
  %32 = call i32 @EXPECTI8(i32 0)
  %33 = load i32, i32* @VarUI8FromR4, align 4
  %34 = call i32 @CONVERT(i32 %33, float 0x3FE3333340000000)
  %35 = call i32 @EXPECTI8(i32 1)
  %36 = load i32, i32* @VarUI8FromR4, align 4
  %37 = call i32 @CONVERT(i32 %36, float 1.500000e+00)
  %38 = call i32 @EXPECTI8(i32 2)
  ret void
}

declare dso_local i32 @CONVVARS(i32) #1

declare dso_local i32 @CONVERT(i32, float) #1

declare dso_local i32 @EXPECTI8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
